@@ -22,7 +22,7 @@ TARGET_LINK_LIBRARIES(${YARPSERVER_NAME} YARP_init)
 
 IF (YARP_USE_PERSISTENT_NAMESERVER)
   SET_PROPERTY(SOURCE ${YARP_CPP} APPEND PROPERTY COMPILE_DEFINITIONS YARP_USE_PERSISTENT_NAMESERVER=1)
-  TARGET_LINK_LIBRARIES(yarp yarpserversql)
+  TARGET_LINK_LIBRARIES(yarp YARP_serversql)
 ENDIF ()
 
 INSTALL(TARGETS yarp ${YARPSERVER_NAME} COMPONENT utilities DESTINATION bin)
